pallas-txbuilder/tests/snapshots/builder__build_transaction_with_multiple_outputs.snap
---
source: pallas-txbuilder/tests/builder.rs
expression: "&cbor"
---
- 0:
    - - - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
      - 0
  1:
    - 0: []
      1: 499999
    - 0: []
      1: 500001
  2: 161534
  15: 1
- {}
- true

