pallas-txbuilder/tests/snapshots/builder__build_transaction_with_timestamp_ttl.snap
---
source: pallas-txbuilder/tests/builder.rs
expression: "&cbor"
---
- 0:
    - - - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
      - 0
  1:
    - 0: []
      1: 1000000
  2: 161270
  3: 76472108
  15: 1
- {}
- true

