pallas-txbuilder/tests/snapshots/builder__build_transaction_with_valid_after.snap
---
source: pallas-txbuilder/tests/builder.rs
expression: tx
---
83a500818258200000000000000000000000000000000000000000000000000000000000000000000181a20040011a000f4240021a00027497081a01555a5d0f01a0f5
