pallas-txbuilder/tests/snapshots/builder__build_with_plutus_data.snap
---
source: pallas-txbuilder/tests/builder.rs
expression: "&cbor"
---
- 0:
    - - - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
      - 0
  1:
    - 0: []
      1: 1000000
  2: 160831
  15: 1
- 4:
    - 1: 2
- true

